Edited wiki page ChangeLog through web user interface.

--- a/wiki/ChangeLog.wiki
+++ b/wiki/ChangeLog.wiki
@@ -12,7 +12,8 @@ are at the top. Dates written extra large are release dates. This contains only 
 ----
 
 *2011 June 13*
-  * Added [JSPDO].
+  * Added [JSPDO] a couple days ago.
+  * Added [http://whiki.wanderinghorse.net/wikis/v8-juice/ an offline editor for the main wiki], which i now use as a staging ground for wiki edits.
 
 *2011 Feb 2*
   * Added several const-overload-resolution fixes to templates in the the v8::juice::convert API. Thanks go to Sai Koushik for reporting the problem and providing code which demonstrated it.
