--- a/wiki/V8Convert_Socket.wiki
+++ b/wiki/V8Convert_Socket.wiki
@@ -40,12 +40,15 @@ The bindings will be added to the given object, which is normally the v8 context
 || `int write(string|ByteArray data [,int length=data.length])` || Writes the given data to the socket. Returns the number of bytes written. ||
 || `int setTimeout( unsigned int seconds[, unsigned int microseconds=0] )` || Sets the i/o timeout for read/write operations. ||
 || `int setTimeoutMs( unsigned int ms )` || Sets the timeout in milliseconds. ||
+|| *Property* || *Description* ||
+|| `Array[string address,int port] peerInfo` || Only valid after a connection is established. ||
+|| `bool timeoutReached` || If a `read()` or `write()` call fails due to a timeout then this will be `true`. The value is re-set on each call to `read()` or `write()`. ||
+
 || *Class-level Functions* || *Description* ||
 || `int getProtoByName( string protocolName )` || Returns the integer value for a given protocol name (e.g. `tcp`, `udp`, or `ntp`) ||
 || `string nameToAddress( string hostname )` || Resolves a host name to an address. ||
 || `string addressToName( string address )` || Resolves an address to a host name. ||
-|| *Property* || *Description* ||
-|| `Array[string address,int port] peerInfo` || Only valid after a connection is established. ||
+
 
 The `Socket` constructor also has the following numeric properties, all of which map directly to C-side constants: `AF_INET`, `AF_INET6`, `AF_UNIX`, `AF_UNSPEC`, `SOCK_DGRAM`, `SOCK_STREAM`, `SOCK_SEQPACKET`, `SOCK_RAW`.
 
@@ -58,11 +61,16 @@ This class is used by the `Socket` class to allow the moderately efficient usage
 ||*Function* || *Description* ||
 ||`new ByteArray([int length=0])` || Creates a new byte array holding the given number of bytes. ||
 ||`new ByteArray(string data [int length=0])` || Creates a new byte array from the given string. ||
-|| `int operator[int index]` || Returns the byte value at the given index. When changing values, an out-of-range index leads to an exception. Set `length` to explicitly expand a `ByteArray`. TODO: add `autoExpand` option. ||
+|| `int index-operator[int index]` || Returns the byte value at the given index. When changing values, an out-of-range index leads to an exception. Set `length` to explicitly expand a `ByteArray`. TODO: add `autoExpand` option. ||
 
 ||*Property* || *Description* ||
 || `int length` || The length of the object's data, in bytes. May be modified. When growing, new bytes have the value `0`. ||
 || `stringValue` || Converts the data to a JS string. Results are undefined if the data is not UTF8-encoded string data. Note that it performs the conversion on each read access, so copy a reference if you want to refer to it multiple times! Setting this property will cause an exception to be thrown. ||
+
+TODOs:
+
+  * `append(ByteArray|string|int)`
+
 
 =Code Examples=
 
