--- a/wiki/ChangeLog.wiki
+++ b/wiki/ChangeLog.wiki
@@ -32,7 +32,7 @@ are at the top. Dates written extra large are release dates. This contains only 
   * Added `v8::juice::GetV8StackTrace()`, which implements the `v8::InvocationCallback` interface and allows us to fetch stacktraces from our JS code. It is available in the `v8-juice-shell` (or via the `JuiceShell` class) with the JS name `getStackTrace()`.
 
 *2010 Dec 29*
-  * Joel Reymont has made v8-juice available [https://github.com/wagerlabs/v8-juice via github].
+  * ~~Joel Reymont has made v8-juice available [https://github.com/wagerlabs/v8-juice via github]~~. (It has since been removed.)
 
 ==2010 November 26==
   * Happy birthday to my brother Gerald!
