--- a/wiki/JSPDO_API.wiki
+++ b/wiki/JSPDO_API.wiki
@@ -1,5 +1,3 @@
-#labels Phase-UserDocs,Topic-JS-API
-
 #summary The JSPDO JS API.
 #labels Phase-UserDocs,Topic-JS-API
 
@@ -61,8 +59,8 @@ The options supported by the function are:
 
 || `mixed sql` || The SQL (string) code to run. It may also be a Statement object, but this function _will not_ finalize it (regardless of success or failure). i.e. such an object is still owned by the caller. ||
 || `mixed bind` || An object or array of data to bind to the statement before execution. If it is a function then `f(statement,bindData)` is called (one time!), where `bindData` is the value of this object's `bindData` member. ||
-|| `any bindData` || Optional data passed to `bind` if it is a function. ||
-|| `function each(row,data,st)` || Is called for each row. The exact type of the 1st parameter depends on the `mode` property. The 2nd argument is the value of this object's `callbackData` member. The 3rd argument is the statement itself. If this is not a function then the statement is `step()`ed only one time (this is only useful for `INSERTS` and such). ||
+|| `any bindData` || Optional data passed to `bind` if it is a function. If `bind` is _not_ a function then this data not used. ||
+|| `function each(row,data,st)` || Is called for each row. The exact type of the 1st parameter depends on the `mode` property. The 2nd argument is the value of this object's `callbackData` member. The 3rd argument is the statement itself. If this is not a function then the statement is `step()`ed only one time and the result of that call is returned (this is generally only useful for `INSERTS` and such). ||
 || `string mode` || If == "array", `each()` is passed an array object as the 1st parameter. "object" passes an object as the 1st parameter. Anything else causes the statement object itself to be passed. ||
 || `any callbackData` || Optional data passed as the 2nd argument to `each()`. ||
 
@@ -186,7 +184,7 @@ It can also be determined by looking at the driver-reported type of the column:
 
 {{{
 var t = myStatement.columnType(zero_based_index);
-if( JSPDO.columnTypes.NULL == t ) {
+if( JSPDO.columnTypes.NULL === t ) {
    ... the value is SQL NULL ...
 }
 }}}
