Edited wiki page JSPDO_API through web user interface.

--- a/wiki/JSPDO_API.wiki
+++ b/wiki/JSPDO_API.wiki
@@ -168,7 +168,7 @@ try {
 finally { st.finalize(); }
 }}}
 
-Note that some functions and properties, e.g. `get()` and `columnNames` are only valid in the context of a successful call to `step()`. If called before `step()` has succeeded, those functions/properties will likely throw an exception if used.
+Note that some functions and properties, namely `get()`, are only valid in the context of a successful call to `step()`. If called before `step()` has succeeded, those API members will likely throw an exception if used.
 
 It is often more convenient to fetch all columns from a result set row at once. We can fetch them as an array of values:
 
