--- a/wiki/ChangeLog.wiki
+++ b/wiki/ChangeLog.wiki
@@ -11,6 +11,11 @@ are at the top. Dates written extra large are release dates. This contains only 
 
 ----
 
+*2011 June 21*
+  * Added some [V8Convert] demo code which shows how to add native-to-JS conversions.
+  * Added `v8::convert::NativeToJSMap<>` to assist in creating native-to-JS mappings.
+  * Got binding to `T [const] & X::func() [const]` and `any X::func( T [const] & ) [const]` working, provided that `T` and `X` are (A) bound to JS and (B) convertible to/from JS using `CastToJS()` and `CastFromJS()`.
+
 *2011 June 19*
   * Added an experimental [V8Convert_Socket socket API] based on [V8Convert].
   * The project hit its 1500th commit today, which averages out to just over 3 commits per day since the code was imported into Google Code (before that it was maintained elsewhere for a few months).
